Attempt make it work on Android 15-16